# ferrl

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  cog.toml  deny.toml  justfile  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/ferrl/: Cargo.toml
crates/ferrl/examples/: countdown_grpo.rs  countdown_grpo_dp.rs  countdown_grpo_qwen35.rs  minimal_task.rs  nccl_dp_allreduce.rs  runreport.rs
crates/ferrl/src/: blocks.rs  checkpoint.rs  comm.rs  countdown.rs  cuda_compat.rs  data.rs  dense.rs  eval.rs  full_ft.rs  gdn.rs  gemma4.rs  grpo.rs  hf.rs  lib.rs  llama.rs  lm_policy.rs  loader.rs  lora.rs  math.rs  model.rs  moe.rs  nn.rs  optim.rs  policy.rs  qwen.rs  qwen35.rs  qwen_policy.rs  remat.rs  reward.rs  rollout_ledger.rs  sample.rs  sampler.rs  sandbox.rs  sharded_safetensors.rs  telemetry.rs  tensor_parallel.rs  tokenizer.rs  trainer.rs  trimul.rs
crates/ferrl/src/comm/: nccl.rs
crates/ferrl/src/comm/nccl/: real.rs
crates/ferrl/tests/: checkpoint_resume.rs  dp_equivalence.rs  gemma4_tiny_oracle.rs  llama_gpu_smoke.rs  llama_real_weights.rs  qwen35_full_ft_e2e.rs  qwen35_gpu_smoke.rs  qwen35_moe_gspo_e2e.rs  qwen35_moe_tiny_oracle.rs  qwen35_real_weights.rs  qwen35_tiny_oracle.rs  qwen_gpu_smoke.rs  qwen_real_weights.rs  sandbox_gate.rs  toy_echo.rs  trimul_gate.rs
crates/ferrl/tests/fixtures/: countdown_dataset.jsonl  gdn_golden.json  grpo_golden.json  grpo_golden_trl.json  math_dataset.jsonl  moe_golden.json  tiny_tokenizer.json
crates/ferrl/tests/fixtures/eos_config/: config.json
crates/ferrl/tests/fixtures/eos_config_malformed/: config.json
crates/ferrl/tests/fixtures/eos_config_multi/: config.json
crates/ferrl/tests/fixtures/tiny_gemma4/: config.json  golden.json  model.safetensors
crates/ferrl/tests/fixtures/tiny_qwen35/: config.json  generation_config.json  golden.json  model-00001-of-00002.safetensors  model-00002-of-00002.safetensors  model.safetensors.index.json
crates/ferrl/tests/fixtures/tiny_qwen35_moe/: config.json  golden.json  model-00001-of-00002.safetensors  model-00002-of-00002.safetensors  model.safetensors.index.json
docs/: trimul-discovery-run-contract.md
scripts/: gen_golden.py
scripts/oracle/: dump_qwen35_real_logits.py  fetch_qwen35_0_8b.py  gen_gdn_golden.py  gen_gemma4_tiny_golden.py  gen_grpo_golden_trl.py  gen_moe_golden.py  gen_qwen35_moe_tiny_golden.py  gen_qwen35_tiny_golden.py  probe_qwen35_sensitivity.py  setup_env.sh
