# ferrl workspace manifest.
#
# Single crate for now (crates/ferrl), but kept as a workspace so the lint and
# dependency policy lives in one place and future crates (e.g. a CLI front-end)
# inherit it. The [workspace.lints] table below is the LOCKED quality bar: CI
# runs `cargo clippy --all-targets -- -D warnings`, so every lint set to `warn`
# here becomes a hard error. The set is deliberately CURATED — `clippy::all`
# plus a hand-picked slice of pedantic — so that correct, idiomatic code
# compiles clean. We do NOT blanket-enable clippy::pedantic / clippy::nursery,
# because under -D warnings their many opinionated lints would fail a fresh,
# correct scaffold on the very first commit.

[workspace]
resolver = "2"
members = ["crates/ferrl"]

[workspace.package]
edition = "2021"
# MSRV = the toolchain floor that builds the WHOLE dependency tree, which is 1.87
# — not ferrl's own edition (2021). Two stacked constraints from the resolved lock:
# (1) the `hf-hub -> ureq -> cookie_store -> url -> idna -> idna_adapter` path pulls
# crates requiring Cargo's `edition2024` feature (stabilized 1.85); (2) candle-core
# 0.10.2 calls the `is_multiple_of` integer method (the `unsigned_is_multiple_of`
# library feature, stabilized 1.87) — the binding constraint. Enforced by the
# `msrv` CI job (`cargo +1.87 check --locked`); verified building the full tree
# before PR-①. 1.82 was the original aspirational floor (never CI-enforced); the
# real floor surfaced when PR-① added the gate. Bump on purpose.
rust-version = "1.87"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Callo42/ferrl"
authors = ["Callo42"]

[workspace.dependencies]
# Math / tensor / autograd / GPU / model backend. We OWN only the RL layer and
# DELEGATE every tensor op, the autograd graph, GPU dispatch, and the model
# forward to candle. The three crates MUST move in lockstep: pin them to the
# SAME version so candle-nn / candle-transformers never resolve a candle-core
# that differs from the one ferrl links. 0.10.2 is the current coherent set
# (published 2026-04-01) and is the first line that ships the Qwen3 model.
candle-core = "=0.10.2"
candle-nn = "=0.10.2"
candle-transformers = "=0.10.2"
# Model + tokenizer assets.
#
# hf-hub fetches the Qwen3-0.6B-Base weights. We drop its default features
# (which pull `native-tls` -> the system OpenSSL `openssl-sys` crate, breaking
# on minimal CI / cluster images) and select the blocking `ureq` client, whose
# TLS is rustls — no system OpenSSL, no tokio runtime for a synchronous
# download. (`rustls-tls` is a weak `reqwest?/rustls-tls` toggle; harmless here
# and documents intent on the async path.)
hf-hub = { version = "0.5", default-features = false, features = ["ureq", "rustls-tls"] }
# tokenizers loads the fast tokenizer. Pin the SAME minor candle 0.10.2 uses
# internally (0.22) so a `tokenizers::Tokenizer` handed across a candle API is
# one type, not a second copy from a divergent version. `default-features =
# false` + `onig` keeps the surface minimal and mirrors candle's own usage.
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
# Telemetry. Structured spans for rollout / update phases.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
# Config / metrics serialization (config.json, metrics.jsonl, golden fixtures).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Errors. `thiserror` for the library's typed error enum; `anyhow` for binaries,
# examples, and oracle/glue paths where a boxed error is fine.
thiserror = "2"
anyhow = "1"
# CLI argument parsing for the `ferrl` binary — the single-binary front door
# (`ferrl train --config` / `ferrl runreport`). A caret (not `=`) lets a patch
# bump resolve freely; the `derive` feature powers the `#[derive(Parser)]` surface.
clap = { version = "4", features = ["derive"] }
# RNG for GRPO sampling / group construction and reproducible test fixtures. The
# `serde` feature serializes the sampler RNG state (`GrpoSampler`'s
# `Xoshiro256PlusPlus`) so a checkpoint can capture and restore it (P6-B resume).
rand = { version = "0.10", features = ["serde"] }
# Optional CUDA driver/runtime bindings. candle pulls cudarc transitively but not
# its `runtime` module; ferrl takes a direct OPTIONAL dep (activated only by the
# `cuda` feature, via `cudarc/runtime`) solely to reach the safe `get_driver_version`
# that powers the `cuda_compat` driver-compatibility preflight. A bare `0.19` (not a
# `=` pin) tracks the exact 0.19.x patch candle resolves, so the two share ONE cudarc
# and the types unify. No new system lib: cudart is already linked by candle-kernels.
cudarc = { version = "0.19", default-features = false }
# Dev: property-based testing for numeric invariants.
proptest = "1"
# Dev: deterministic float comparison in tests.
approx = "0.5"
# Dev: safe SIGTERM/SIGUSR1 -> AtomicBool wiring for the example's restart-on-
# preemption demo. The library never installs signal handlers (stays signal-free
# and forbid-unsafe-clean); the run binary does, via signal_hook::flag::register.
signal-hook = { version = "0.3", default-features = false }

[workspace.lints.rust]
# Safety + docs gate. `unsafe_code` is DENIED workspace-wide (the crate root
# mirrors it with `#![deny(unsafe_code)]`): the default/CI build compiles zero
# `unsafe`. It is `deny`, not `forbid`, for exactly one reason — the
# `--features nccl` NCCL FFI (ferrl's decision-D2 quarantine) needs a single
# `#[allow(unsafe_code)]` in its one gated module, which `forbid` cannot permit.
# That module is not compiled without the feature, so the guarantee for ordinary
# contributors is unchanged; the one allow is greppable and lives only behind the
# GPU feature.
unsafe_code = "deny"
missing_docs = "deny"
unreachable_pub = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
# Baseline: the full `all` group (correctness, suspicious, style, complexity,
# perf) at deny. `priority = -1` sinks the group below the individual keys
# below, so any single-lint override here wins regardless of table order. This
# is the bulk of the value and is safe under -D warnings for correct code.
all = { level = "deny", priority = -1 }

# Curated pedantic slice — high-signal lints that catch real readability /
# correctness footguns without the false-positive noise of the full pedantic
# group. Each passes clean on idiomatic scaffold code. (We intentionally OMIT
# notoriously noisy pedantic lints such as must_use_candidate,
# module_name_repetitions, and similar_names, which would fail a clean tree
# under -D warnings.)
doc_markdown = "warn"
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
unnested_or_patterns = "warn"
uninlined_format_args = "warn"
cast_lossless = "warn"
map_unwrap_or = "warn"
return_self_not_must_use = "warn"
inefficient_to_string = "warn"
cloned_instead_of_copied = "warn"
# NOTE: clippy::float_cmp is deliberately NOT enabled. This is a numeric RL
# library: exact f32/f64 comparisons are routine and intentional (epsilon
# guards like `denom == 0.0`, and `assert_eq!` on exactly-representable test
# values). Tolerant comparison uses the `approx` dev-dep where it belongs.
# Enabling float_cmp would force #[allow] on idiomatic numeric code — noise,
# not signal — which violates the curated bar.

# We log via `tracing`, never std streams. Direct prints are a bug.
print_stdout = "deny"
print_stderr = "deny"

# Cognitive-complexity bound (~7 branches), the analog of mccabe
# max-complexity = 7. This lint lives in clippy's `restriction` group (default
# allow), so we opt in explicitly here; the numeric threshold lives in
# clippy.toml (cognitive-complexity-threshold = 7).
cognitive_complexity = "warn"

# Encourage `# Errors` / `# Panics` doc sections on public fallible API.
missing_errors_doc = "warn"
missing_panics_doc = "warn"
