[package]
name = "ferrl"
version = "0.1.0"
description = "A candle-native GRPO reinforcement-learning library for RL-fine-tuning LLMs in Rust."
keywords = ["rl", "grpo", "llm", "candle", "fine-tuning"]
categories = ["science", "algorithms"]
readme = "../../README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Tensor / autograd / GPU backend and the shipped model + tokenizer stack.
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
hf-hub = { workspace = true }
tokenizers = { workspace = true }
# Telemetry, serialization, errors, RNG.
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
# Optional, activated only by the `cuda` feature (see below): the proactive
# driver-version query in `cuda_compat`. Off by default, so the CPU build is unchanged.
cudarc = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
approx = { workspace = true }
# Signal -> flag wiring for the countdown example's restart-on-preemption demo.
signal-hook = { workspace = true }

[features]
# Default is CPU-only: this is what GitHub Actions CI builds and tests, and the
# default for ordinary contributors without a GPU.
default = []
# `cuda` forwards the CUDA backend to every candle crate ferrl links. Because
# ferrl depends on candle-core / candle-nn / candle-transformers directly (not
# via candle's internal `candle` alias), the feature paths use those exact
# dependency names. Built only on the Slurm GPU cluster, never in CI.
#   cargo build --features cuda
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
    # Activate the optional direct cudarc dep and its `runtime` module (which
    # provides the safe `get_driver_version`) for the `cuda_compat` preflight.
    "dep:cudarc",
    "cudarc/runtime",
]
# cuDNN convolutions, layered on top of cuda. Optional GPU-only acceleration.
cudnn = [
    "cuda",
    "candle-core/cudnn",
    "candle-nn/cudnn",
]
# FlashAttention kernels (implies cuda). candle-transformers gates these behind
# its own `flash-attn` feature.
flash-attn = [
    "cuda",
    "candle-transformers/flash-attn",
]
# NCCL multi-GPU collectives (implies cuda). The `--features nccl` quarantine
# (decision D2): the crate's ONLY `unsafe` lives behind this flag — the real
# `NcclComm` all-reduce over cudarc's NCCL bindings. The default CPU build and
# GitHub CI never compile it, so the default build stays `unsafe`-free under
# `#![deny(unsafe_code)]` (`deny`, not `forbid`, so this one gated module may
# `#[allow]`); it builds and links only on the GPU cluster (nvhpc SDK ships
# libnccl), runtime-gated by a
# manual multi-GPU Slurm run. The portable bridge logic (config, dtype/error
# mapping, contract validation, orchestration) lives in the default build and is
# CI-tested against an in-memory mock; only the FFI primitive impl is gated here.
nccl = [
    "cuda",
    "cudarc/nccl",
]

[lints]
workspace = true
