[package]
name = "ferrl"
version = "0.1.0"
description = "A candle-native GRPO reinforcement-learning library for RL-fine-tuning LLMs in Rust."
keywords = ["rl", "grpo", "llm", "candle", "fine-tuning"]
categories = ["science", "algorithms"]
readme = "../../README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Tensor / autograd / GPU backend and the shipped model + tokenizer stack.
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
hf-hub = { workspace = true }
tokenizers = { workspace = true }
# Telemetry, serialization, errors, RNG. The library's typed errors use
# `thiserror`; `anyhow` is NOT a library dependency (it lives in dev-dependencies,
# used only by the examples / glue), so the crate's public API is `anyhow`-free.
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
safetensors = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
# CLI parsing for the `ferrl` binary (the single-binary front door). Used only by
# `src/bin/ferrl.rs`; the library API stays clap-free.
clap = { workspace = true }
# Optional, activated only by the `cuda` feature (see below): the proactive
# driver-version query in `cuda_compat`. Off by default, so the CPU build is unchanged.
cudarc = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
approx = { workspace = true }
# `anyhow` is an example/glue convenience (boxed errors in the runnable demos);
# keeping it out of [dependencies] guarantees the published library API never
# surfaces an `anyhow` type. Examples can still use it (they see dev-dependencies).
anyhow = { workspace = true }
# Signal -> flag wiring for the countdown example's restart-on-preemption demo.
signal-hook = { workspace = true }

# The single-binary front door: `ferrl train --config` / `ferrl runreport`. Lives
# in `src/bin/` so it is excluded from the coverage denominator (it is thin CLI
# glue; its end-to-end behavior is gated by the manual CPU smoke, and all
# extractable logic lives in covered library modules).
[[bin]]
name = "ferrl"
path = "src/bin/ferrl.rs"

[features]
# Default is CPU-only: this is what GitHub Actions CI builds and tests, and the
# default for ordinary contributors without a GPU.
default = []
# Enables the sandbox malicious-probe integration battery (`tests/sandbox_gate.rs`):
# real `apptainer exec` runs that prove the isolation *contains a hostile payload*
# (no $HOME/credential read, no network, fork/OOM/file caps, wall-clock timeout).
# Off by default — like the `cuda` GPU tests, CI never compiles it (so it neither
# runs nor affects coverage). Run on a cluster node with an ISOLATED allocation:
#   cargo test --features gate --test sandbox_gate -- --ignored
# clippy/fmt for it are self-gated manually (CI does not see them):
#   cargo clippy --features gate --all-targets
gate = []
# `cuda` forwards the CUDA backend to every candle crate ferrl links. Because
# ferrl depends on candle-core / candle-nn / candle-transformers directly (not
# via candle's internal `candle` alias), the feature paths use those exact
# dependency names. Built only on a GPU machine with a CUDA toolkit, never in CI.
#   cargo build --features cuda
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
    # Activate the optional direct cudarc dep and its `runtime` module (which
    # provides the safe `get_driver_version`) for the `cuda_compat` preflight.
    "dep:cudarc",
    "cudarc/runtime",
]
# cuDNN convolutions, layered on top of cuda. Optional GPU-only acceleration.
cudnn = [
    "cuda",
    "candle-core/cudnn",
    "candle-nn/cudnn",
]
# FlashAttention kernels (implies cuda). candle-transformers gates these behind
# its own `flash-attn` feature.
flash-attn = [
    "cuda",
    "candle-transformers/flash-attn",
]
# NCCL multi-GPU collectives (implies cuda). The `--features nccl` quarantine
# (decision D2): the crate's ONLY `unsafe` lives behind this flag — the real
# `NcclComm` all-reduce over cudarc's NCCL bindings. The default CPU build and
# GitHub CI never compile it, so the default build stays `unsafe`-free under
# `#![deny(unsafe_code)]` (`deny`, not `forbid`, so this one gated module may
# `#[allow]`); it builds and links only with a CUDA toolkit that provides NCCL
# (libnccl), runtime-gated by a manual multi-GPU run. The portable bridge logic (config, dtype/error
# mapping, contract validation, orchestration) lives in the default build and is
# CI-tested against an in-memory mock; only the FFI primitive impl is gated here.
nccl = [
    "cuda",
    "cudarc/nccl",
]

[lints]
workspace = true
